# farscry

./: .gitignore  CHANGELOG.md  Cargo.toml  NOTICES.md  README.md  install.sh
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md
benchmarks/results/: benchmark_final.json  benchmark_raw.json  benchmark_v2.json
crates/farscry/: Cargo.toml  build.rs
crates/farscry-adapters/: Cargo.toml
crates/farscry-adapters/src/: claude_computer_use.rs  lib.rs  openai_vision.rs  playwright_a11y.rs
crates/farscry-classifier/: Cargo.toml
crates/farscry-classifier/src/: bench.rs  element.rs  lib.rs  screen.rs  spatial.rs
crates/farscry-core/: Cargo.toml
crates/farscry-core/src/: error.rs  hash.rs  lib.rs  pipeline.rs  traits.rs  types.rs  vasf.rs
crates/farscry-diff/: Cargo.toml
crates/farscry-diff/src/: classify.rs  engine.rs  lib.rs  similarity.rs  spatial.rs  text_match.rs
crates/farscry-formatter/: Cargo.toml
crates/farscry-formatter/src/: annotate.rs  context.rs  diff.rs  lib.rs  vasp.rs
crates/farscry-mcp/: Cargo.toml
crates/farscry-mcp/src/: helpers.rs  jsonrpc.rs  lib.rs  protocol.rs  transport.rs  types.rs
crates/farscry-ocr/: Cargo.toml
crates/farscry-ocr-coreml/: Cargo.toml
crates/farscry-ocr-coreml/examples/: diagnose_rec.rs  pipeline.rs
crates/farscry-ocr-coreml/models/farscry-det.mlpackage/: Manifest.json
crates/farscry-ocr-coreml/models/farscry-rec.mlmodelc/: metadata.json
crates/farscry-ocr-coreml/models/farscry-rec.mlpackage/: Manifest.json
crates/farscry-ocr-coreml/models/farscry-rec.mlpackage/Data/com.apple.CoreML/: model.mlmodel
crates/farscry-ocr-coreml/src/: dict.rs  engine.rs  lib.rs  model.rs  postprocess.rs  preprocess.rs  verify.rs
crates/farscry-ocr-ort/: Cargo.toml
crates/farscry-ocr-ort/src/: engine.rs  lib.rs  verify.rs
crates/farscry-ocr/src/: lib.rs
crates/farscry/src/: config.rs  display_stream.m  iosurface_phash.rs  main.rs  pipeline.rs  util.rs
crates/farscry/src/clipboard/: linux.rs  macos.rs  mod.rs  windows.rs
crates/farscry/src/commands/: annotate.rs  daemon.rs  diff.rs  extract.rs  hook.rs  info.rs  install.rs  mod.rs  pack.rs  paste.rs  record.rs  serve.rs  session.rs  setup.rs  timeline.rs
crates/farscry/src/commands/setup/: mod.rs  smart_paste.rs  terminal.rs  wizard.rs
docs/: hn-post.md
docs/architecture/: farscry-ocr-backend-architecture.md
docs/commands/: daemon.md  hook.md  session.md
docs/projects/: farscry-dev-status-20260513.md  farscry-v0.1.0-po-validation.md  farscry-v0.1.0-prd.md  roadmap-v0.2.0.md  roadmap-v0.3.0.md
docs/stories/: 1-farscry-core.md  10-distribution.md  11-site-update.md  12-launch.md  2-farscry-ocr-coreml.md  3-farscry-ocr-ort.md  4-farscry-ocr-selector.md  5-farscry-classifier.md  6-farscry-diff.md  7-farscry-formatter.md  8-farscry-mcp.md  9-farscry-binary.md
fixtures/: claude-computer-use-result.json
homebrew/: README.md
homebrew/Formula/: farscry.rb
npm/: .npmignore  README.md  package.json  postinstall.js
pip/: README.md  hatch_build.py  pyproject.toml
pip/farscry/: __init__.py  _cli.py
spike/: Cargo.toml  domain_validation.py  rico_raw_loader.py  spike_approaches.py  spike_deep.py
spike-coreml-ep/: Cargo.toml  models
spike-coreml-ep/src/: main.rs
spike-native-coreml/: Cargo.toml  check_conversion.py  compare_onnx_vs_onnx2torch.py  convert_models.py  convert_rec_batch32.py  fix_onnx_batch.py  reconvert_rec.py  test_ane_vs_cpu.py  test_batch_trace.py  test_correct_norm.py  test_final.py  test_mlpackage_vs_mlmodelc.py  test_new_bbox.py  test_same_region.py  trace_coreml_bug.py
spike-native-coreml/models/en_pp-ocrv5_mobile_rec.mlmodelc/: metadata.json  model.mil
spike-native-coreml/models/en_pp-ocrv5_mobile_rec.mlpackage/: Manifest.json
spike-native-coreml/models/en_pp-ocrv5_mobile_rec.mlpackage/Data/com.apple.CoreML/: model.mlmodel
spike-native-coreml/models/en_pp-ocrv5_mobile_rec_b32.mlmodelc/: metadata.json
spike-native-coreml/models/en_pp-ocrv5_mobile_rec_b32.mlpackage/: Manifest.json
spike-native-coreml/models/en_pp-ocrv5_mobile_rec_b32.mlpackage/Data/com.apple.CoreML/: model.mlmodel
spike-native-coreml/models/en_pp-ocrv5_mobile_rec_test.mlpackage/: Manifest.json
spike-native-coreml/models/en_pp-ocrv5_mobile_rec_test.mlpackage/Data/com.apple.CoreML/: model.mlmodel
spike-native-coreml/models/pp-ocrv5_mobile_det.mlmodelc/: metadata.json
spike-native-coreml/models/pp-ocrv5_mobile_det.mlpackage/Data/com.apple.CoreML/: model.mlmodel
spike-native-coreml/src/: main.rs
spike/benchmark/: generate_screenshots.py  ground_truth.json  run_benchmark.py
spike/benchmark/results/: full_log.json  results.csv  summary.json
spike/diff_test/: generate_images.py
spike/models/: det_int8.onnx  rec_int8.onnx
spike/models/coreml/farscry-det.mlmodelc/: model.mil
spike/models/coreml/farscry-rec.mlmodelc/: model.mil
spike/semantic_annotations/: 1000.json  10000.json  10002.json  10003.json  10004.json  10005.json  10008.json  1001.json  10010.json  10011.json  10012.json  10013.json  10014.json  10015.json  10016.json  10018.json  1002.json  10020.json  10021.json  10022.json  10023.json  10024.json  10025.json  10026.json  10027.json  10028.json  10029.json  1003.json  10030.json  10031.json  10032.json  10033.json  10034.json  10035.json  10036.json  10037.json  10038.json  10039.json  1004.json  10040.json  (+60917 more)
spike/src/: main.rs
