[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "farscry"
version = "0.1.0"
description = "Image interpreter for automation workflows - local, offline, 8x fewer tokens"
readme = "README.md"
license = { text = "Apache-2.0" }
keywords = ["ai", "agents", "ocr", "vision", "vasp", "mcp", "screenshot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Graphics :: Capture :: Screen Capture",
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://farscry.dev"
Repository = "https://github.com/teles-forge/farscry"
Documentation = "https://farscry.dev/docs"
"Bug Tracker" = "https://github.com/teles-forge/farscry/issues"

[project.scripts]
farscry = "farscry._cli:main"

[tool.hatch.build]
hooks = ["hatch_build.py"]

[tool.hatch.build.targets.wheel]
packages = ["farscry"]
artifacts = ["bin/*"]
