[package]
name = "farscry-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = true
description = "Core types and traits for the VASP visual agent state protocol"
keywords = ["ocr", "vision", "agents", "vasp", "mcp"]
categories = ["computer-vision", "command-line-utilities"]

[dependencies]
image = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }
rustdct = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
serde_json = "1"
