[package]
name = "farscry-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
farscry-core = { path = "../farscry-core" }
farscry-formatter = { path = "../farscry-formatter" }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
image = { workspace = true }

[dev-dependencies]
tempfile = "3"
