[package]
name = "farscry-ocr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
coreml = ["dep:farscry-ocr-coreml"]

[dependencies]
farscry-core    = { path = "../farscry-core" }
farscry-ocr-ort = { path = "../farscry-ocr-ort" }

[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
farscry-ocr-coreml = { path = "../farscry-ocr-coreml", optional = true }
