[package]
name = "farscry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = true

[[bin]]
name = "farscry"
path = "src/main.rs"

[dependencies]
farscry-core      = { path = "../farscry-core" }
farscry-classifier = { path = "../farscry-classifier" }
farscry-diff      = { path = "../farscry-diff" }
farscry-formatter = { path = "../farscry-formatter" }
farscry-mcp       = { path = "../farscry-mcp" }
farscry-ocr       = { path = "../farscry-ocr" }
clap    = { version = "4", features = ["derive"] }
anyhow  = "1"
image   = { workspace = true }
tokio   = { version = "1", features = ["full"] }
serde_json = "1"
dirs    = { workspace = true }

[features]
coreml = ["farscry-ocr/coreml"]
