[package]
name = "farscry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = true
description = "Image interpreter for AI agents, local OCR, typed coordinates, VASP output"
keywords = ["ocr", "vision", "agents", "vasp", "mcp"]
categories = ["computer-vision", "command-line-utilities"]

[[bin]]
name = "farscry"
path = "src/main.rs"

[dependencies]
farscry-core      = { path = "../farscry-core" }
farscry-classifier = { path = "../farscry-classifier" }
farscry-diff      = { path = "../farscry-diff" }
farscry-formatter = { path = "../farscry-formatter" }
farscry-mcp       = { path = "../farscry-mcp" }
farscry-ocr       = { path = "../farscry-ocr" }
clap    = { version = "4", features = ["derive"] }
anyhow  = "1"
image   = { workspace = true }
tokio   = { version = "1", features = ["full"] }
serde_json = "1"
serde   = { workspace = true }
toml    = "0.8"
dirs    = { workspace = true }
ureq    = { version = "3", features = [] }
sha2    = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
base64 = "0.22"

[features]
coreml = ["farscry-ocr/coreml"]
