[package]
name = "farscry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = true
description = "Image interpreter for AI agents, local OCR, typed coordinates, VASP output"
keywords = ["ocr", "vision", "agents", "vasp", "mcp"]
categories = ["computer-vision", "command-line-utilities"]

[[bin]]
name = "farscry"
path = "src/main.rs"

[dependencies]
farscry-core      = { path = "../farscry-core" }
farscry-classifier = { path = "../farscry-classifier" }
farscry-diff      = { path = "../farscry-diff" }
farscry-formatter = { path = "../farscry-formatter" }
farscry-mcp       = { path = "../farscry-mcp" }
farscry-ocr       = { path = "../farscry-ocr" }
clap    = { version = "4", features = ["derive"] }
anyhow  = "1"
image   = { workspace = true }
tokio   = { version = "1", features = ["full"] }
serde_json = "1"
serde   = { workspace = true }
toml    = "0.8"
dirs    = { workspace = true }
chrono = "0.4.44"
crossbeam-channel = "0.5.15"
ctrlc = { version = "3.5.2", features = ["termination"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"

[target.'cfg(not(target_os = "macos"))'.dependencies]
scrap = "0.5"

[features]
coreml = ["farscry-ocr/coreml"]
